@@ -1,5 +1,13 @@
 2001-10-09  Phil Edwards  <pme@gcc.gnu.org>
 
+	* docs/html/17_intro/howto.html:  Tweak markup and value type.
+	* docs/html/27_io/howto.html:  Tweak markup, describe setbuf() for
+	nonzero arguments, add new note on threading.
+	* docs/html/faq/index.html:  Update.
+	* docs/html/faq/index.txt:  Regenerate.
+
+2001-10-09  Phil Edwards  <pme@gcc.gnu.org>
+
 	* docs/html/configopts.html:  More HTML->XHTML and lowercasing of tags.
 	* docs/html/documentation.html:  Likewise.
 	* docs/html/explanations.html:  Likewise.
